# img_pubsubpy_all

./: README.md
BarcodeDetectorEdge/: settings.gradle.kts
BarcodeDetectorEdge/app/: build.gradle.kts
BarcodeDetectorEdge/app/src/androidTest/java/com/example/barcodedetectoredge/: ExampleInstrumentedTest.kt
BarcodeDetectorEdge/app/src/main/: AndroidManifest.xml
BarcodeDetectorEdge/app/src/main/java/com/example/barcodedetectoredge/: Application.kt
BarcodeDetectorEdge/app/src/main/java/com/example/barcodedetectoredge/di/: BarcodeScanner.kt  MlkitScanner.kt
BarcodeDetectorEdge/app/src/main/java/com/example/barcodedetectoredge/model/: BarcodeResult.kt  FramePacket.kt
BarcodeDetectorEdge/app/src/main/res/layout/: activity_main.xml  camera_fragment.xml
BarcodeDetectorEdge/app/src/main/res/values/: strings.xml  themes.xml
BarcodeDetectorEdge/app/src/test/java/com/example/barcodedetectoredge/: ExampleUnitTest.kt
BarcodeDetectorEdge/gradle/wrapper/: gradle-wrapper.properties
img_pubsubpy/: README.md  package.xml  setup.cfg
img_pubsubpy/img_pubsubpy/: publisher_member_function.py  setup.py  subscriber_member_function.py  subscriber_member_function2.py
img_pubsubpy/img_pubsubpy/img_pubsubpy/: drone_node.py
img_pubsubpy/img_pubsubpy/img_pubsubpy/utils/: edge1_object_detect.py  frame_cache.py
img_pubsubpy/img_pubsubpy/src/: object_detect_node.py
img_pubsubpy/img_pubsubpy/src/utils/: fps_counter.py
signaling_server/: signaling_server.py
slam_node/: CMakeLists.txt  main.cpp
(+14 files in other folders)
